--- a/signin.html
+++ b/signin.html
@@ -43,7 +43,7 @@
                 <button type="submit" class="login-btn">Sign Up</button>
                 
                 <p class="auth-link">
-                    Already have an account? <a href="login.html">Login here</a>
+                    Already have an account? <a href="index.html">Login here</a>
                 </p>
             </form>
         </div>
