--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@ document.addEventListener('DOMContentLoaded', function() {
                 return;
             }
 
-            alert('Login successful! This will redirect to dashboard');
-            
+            // alert('Login successful! This will redirect to dashboard');
+            window.location.href = 'homepage.html';
 
         });
     }
