--- a/404.html
+++ b/404.html
@@ -1,1 +1,192 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Page Not Found - SmartBite</title>
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.cdnfonts.com/css/sf-pro-display" rel="stylesheet">
+    <style>
+        /* 404 Page Specific Styles */
+        .error-container {
+            min-height: 100vh;
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding: 20px;
+            font-family: 'SF Pro Display', -apple-system, BlinkMacSystemFont, system-ui, sans-serif;
+        }
+
+        .error-content {
+            background: white;
+            border-radius: 20px;
+            padding: 60px 40px;
+            text-align: center;
+            box-shadow: 0 20px 60px rgba(0, 0, 0, 0.1);
+            max-width: 500px;
+            width: 100%;
+        }
+
+        .error-number {
+            font-size: 120px;
+            font-weight: bold;
+            color: #667eea;
+            line-height: 1;
+            margin: 0 0 20px 0;
+            text-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+
+        .error-title {
+            font-size: 28px;
+            font-weight: 600;
+            color: #333;
+            margin: 0 0 15px 0;
+        }
+
+        .error-message {
+            font-size: 16px;
+            color: #666;
+            margin: 0 0 40px 0;
+            line-height: 1.6;
+        }
+
+        .error-actions {
+            display: flex;
+            flex-direction: column;
+            gap: 15px;
+        }
+
+        .error-btn {
+            padding: 15px 30px;
+            border: none;
+            border-radius: 50px;
+            font-size: 16px;
+            font-weight: 600;
+            text-decoration: none;
+            display: inline-block;
+            transition: all 0.3s ease;
+            cursor: pointer;
+        }
+
+        .btn-primary {
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            color: white;
+        }
+
+        .btn-primary:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 8px 25px rgba(102, 126, 234, 0.4);
+        }
+
+        .btn-secondary {
+            background: transparent;
+            color: #667eea;
+            border: 2px solid #667eea;
+        }
+
+        .btn-secondary:hover {
+            background: #667eea;
+            color: white;
+        }
+
+        .logo-section {
+            margin-bottom: 30px;
+        }
+
+        .logo {
+            width: 80px;
+            height: 80px;
+            border-radius: 15px;
+            margin-bottom: 20px;
+        }
+
+        .app-name {
+            font-size: 24px;
+            font-weight: 700;
+            color: #667eea;
+            margin: 0;
+        }
+
+        /* Mobile Responsive */
+        @media (max-width: 768px) {
+            .error-content {
+                padding: 40px 30px;
+            }
+
+            .error-number {
+                font-size: 90px;
+            }
+
+            .error-title {
+                font-size: 24px;
+            }
+
+            .error-actions {
+                flex-direction: column;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .error-container {
+                padding: 15px;
+            }
+
+            .error-content {
+                padding: 30px 20px;
+            }
+
+            .error-number {
+                font-size: 70px;
+            }
+
+            .error-title {
+                font-size: 20px;
+            }
+
+            .error-btn {
+                padding: 12px 24px;
+                font-size: 14px;
+            }
+        }
+    </style>
+</head>
+<body>
+    <div class="error-container">
+        <div class="error-content">
+            <!-- Logo Section -->
+            <div class="logo-section">
+                <img src="logo_3.png" alt="SmartBite Logo" class="logo">
+                <h2 class="app-name">SmartBite</h2>
+            </div>
+
+            <!-- Error Message -->
+            <div class="error-number">404</div>
+            <h1 class="error-title">Oops! Page Not Found</h1>
+            <p class="error-message">
+                The page you're looking for seems to have wandered off. 
+                Don't worry, it happens to the best of us! Let's get you back on track.
+            </p>
+
+            <!-- Action Buttons -->
+            <div class="error-actions">
+                <a href="index.html" class="error-btn btn-primary">
+                    🏠 Back to Login
+                </a>
+                <a href="homepage.html" class="error-btn btn-secondary">
+                    📱 Go to Homepage
+                </a>
+            </div>
+        </div>
+    </div>
+
+    <!-- Optional: Auto redirect after timeout -->
+    <script>
+        // Optional: Auto-redirect to homepage after 10 seconds
+        // setTimeout(function() {
+        //     window.location.href = 'index.html';
+        // }, 10000);
+    </script>
+</body>
+</html>
 
